[package]
name = "manage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.3.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "chrono",
    "migrate"
]
